Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89427

qtopcua missing limits include

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.0.1
    • 6.0.0
    • OpcUA
    • None
    • All

      src\plugins\opcua\open62541\qopen62541backend.cpp

      is missing to include <limits> since it is using std::numeric_limits in line 1060.

      error:

      E:\qt6\buildtrees\qtopcua\src\v6.0.0-e02eb5f636.clean\src\plugins\opcua\open62541\qopen62541backend.cpp(1060): error C2589: '(': illegal token on right side of '::'

       

        1. build_fixes.patch
          3 kB
        2. build.patch
          4 kB
        3. limits.patch
          0.4 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fmeerkoetter Frank Meerkötter
            neumann-a Alexander Neumann
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes