Prevent preprocessor shenanigans on Windows

We already guard against max() being (wrongfully)
being replaced at other places in Qt OPC UA. Not sure we this
one did not cause trouble so far.

Thanks to Alexander Neumann

Task-number: QTBUG-89427
Change-Id: I7906ec1b99401b7fefcfcdab1b0ccd82c999c174
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>