src/plugins/opcua/open62541/qopen62541backend.cpp
@@ -50,6 +50,7 @@
 #include <QtCore/qurl.h>
 
 #include <algorithm>
+#include <limits>
 
 QT_BEGIN_NAMESPACE
 
@@ -1057,11 +1058,11 @@ void Open62541AsyncBackend::reevaluateClientIterateTimer()
     if (m_subscriptions.count() == 0)
         m_clientIterateTimer.start(m_maximumIterateInterval);
     else {// Derive an interval from the the lowest subscription and a lower limit.
-        double minimum = std::numeric_limits<double>::max();
+        double minimum = (std::numeric_limits<double>::max)();
         for (const auto subscription : m_subscriptions)
             minimum = subscription->interval() < minimum ? subscription->interval() : minimum;
         // Set an interval between configured minimum and maximum, depending on the fastest subscription
-        m_clientIterateTimer.start(std::min(m_maximumIterateInterval, std::max(m_minimumIterateInterval, minimum)));
+        m_clientIterateTimer.start((std::min)(m_maximumIterateInterval, (std::max)(m_minimumIterateInterval, minimum)));
     }
 }
 
